# SLA_Public

./: .gitignore  LICENSE  README.cn.md  README.md  deploy.py  exp_start.py  pyproject.toml  requirements.txt
config_templates/: ModelProfiles.toml  daily_report_llm_conf.toml  deploy.toml  llm_prompt.toml  secrets.toml  suricata-llm-agent.toml
deploy/: __init__.py  blocks.py  config.py  constants.py  log.py  main.py  oauth2.py  podman.py  preflight.py  template.py  utils.py  workdir.py
docs/: agent-mode.md  architecture.md  configuration.md  deployment.md  executor.md  git-integration.md  mail-system.md  rmi.md
exp_data_and_reports/: README.md
src/: __init__.py  comm_proto_pair_memory.py  config.py  daily_report.py  es_client.py  finetune_store.py  global_memory.py  llm_backend.py  llm_handler.py  llm_prompt.py  logging_utils.py  main.py  orchestrator.py  perf_cacl.py  pre_process.py  processor.py  rmi.py  tool_schema.py  versioning.py
tests/: __init__.py  conftest.py  test_ablation_switches.py  test_auth_bootstrap.py  test_auth_database.py  test_auth_dependencies.py  test_auth_log_broadcast.py  test_auth_passwords.py  test_auth_tokens.py  test_backends.py  test_comm_proto_pair_memory.py  test_config.py  test_daily_report.py  test_deploy_workdir.py  test_es_client.py  test_executor.py  test_finetune_store.py  test_git_handlers.py  test_llm_handler.py  test_llm_handler_memory.py  test_llm_prompt.py  test_mail_queue.py  test_mail_recipients.py  test_main_helpers.py  test_orchestrator.py  test_perf_cacl.py  test_pre_process.py  test_preflight.py  test_processor.py  (+4 more)
(+200 files in other folders)
